--- a/SquashGame/SquashGame.vcxproj
+++ b/SquashGame/SquashGame.vcxproj
@@ -126,6 +126,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="src\Application.cpp" />
+    <ClCompile Include="src\Database.cpp" />
     <ClCompile Include="src\display.cpp" />
     <ClCompile Include="src\draw.cpp" />
     <ClCompile Include="src\error.cpp" />
@@ -138,14 +139,15 @@
     <ClCompile Include="src\textures.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\Database.h" />
     <ClInclude Include="src\definition.h" />
     <ClInclude Include="src\display.h" />
     <ClInclude Include="src\draw.h" />
     <ClInclude Include="src\error.h" />
     <ClInclude Include="src\initialization.h" />
     <ClInclude Include="src\interaction.h" />
+    <ClInclude Include="src\json.hpp" />
     <ClInclude Include="src\print.h" />
-    <ClInclude Include="src\prototypes.h" />
     <ClInclude Include="src\screencasts.h" />
     <ClInclude Include="src\shapes.h" />
     <ClInclude Include="src\stb_image.h" />
